update the site sections and navigation. Add Concept, rename Portfolio to Locations. Add HashHouse locations

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,9 +11,9 @@
 # -----------------
 en: &DEFAULT_EN
   nav:
-    - title: "Services"
+    - title: "Concept"
       section: services
-    - title: "Portfolio"
+    - title: "Locations"
       section: portfolio
     - title: "About"
       section: about
