--- a/_data/style.yml
+++ b/_data/style.yml
@@ -3,7 +3,7 @@
 #white: "#FF0000"
 #black: "#000"
 
-header-image: "../img/home_background.jpeg"
-contact-image: "../img/contact.png"
+header-image: "../images/home_background.jpeg"
+# contact-image: "../images/contact.png"
 #Font Awesome icon for portfolio grid when an item is hovered over
 #portfolio-icon: fas fa-expand-arrows-alt fa-3x #default: fas fa-plus fa-3x
